# Crud

./: Dockerfile  main.py  pyproject.toml
app/auth/: auth_router.py
app/core/: config.py
app/product/model/: product_model.py
app/product/router/: product_router.py
app/product/schema/: product_schem.py
app/product/service/: product_crud.py
app/token/: token.py
app/token/model/: refresh_token.py
app/token/routers/: token_router.py
app/token/schema/: refresh_token_schem.py
app/token/services/: token_crud.py
app/user/model/: user_model.py
app/user/router/: user_router.py
app/user/schema/: user_schem.py
app/user/service/: user_crud.py
